# PlasmaGlow

./: .gitignore  CMakeLists.txt  README.md  install.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
src/: glowcontroller.cpp  glowcontroller.h
